Fixed spacing on card

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -27,9 +27,15 @@
     letter-spacing: 5px;
 }
 
-.card-body{
-    font-family: "League Mono", Verdana, Tahoma;
-
+.card_intro{
+    p{
+        margin: 0
+    }
+    .card-body{
+        font-family: "League Mono", Verdana, Tahoma;
+        font-size: 1.2em;
+        padding-bottom: 0,
+    }
 }
 
 .elevation-8 {
